Fixed the routing problem and making the correct redirection to the user storage based on the role log in(client or company). Fixed the mobile bar context, but still needing correction to collapse in a menu.

--- a/Angular-Frontend/ServiceBookingSystemWeb/src/app/app.component.scss
+++ b/Angular-Frontend/ServiceBookingSystemWeb/src/app/app.component.scss
@@ -73,7 +73,7 @@ $white-one: #fcfcfc;
     }
 }
 
-@media only screen and (max-width: 768px){
+@media only screen and (min-width: 768px){
     .mobile-sidenav{
         display: none;
     }
